@@ -7,7 +7,7 @@ import com.google.gson.JsonParser;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
 
@@ -26,10 +26,10 @@ public class NameUtil {
                 }
             } else {
                 try {
-                    URL url = new URL(ModConfigUtil.getConfig().nameUrl);
-                    URLConnection connection = url.openConnection();
+                    URI uri = URI.create(ModConfigUtil.getConfig().nameUrl);
+                    URLConnection connection = uri.toURL().openConnection();
                     connection.setConnectTimeout(10000);
-                    BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream(), StandardCharsets.UTF_8));
+                    BufferedReader reader = new BufferedReader(new InputStreamReader(uri.toURL().openStream(), StandardCharsets.UTF_8));
                     StringBuilder stringBuilder = new StringBuilder();
                     String line;
 
@@ -38,8 +38,7 @@ public class NameUtil {
                     }
                     reader.close();
 
-                    JsonParser parser = new JsonParser();
-                    JsonObject jsonObject = parser.parse(stringBuilder.toString()).getAsJsonObject();
+                    JsonObject jsonObject = JsonParser.parseString(stringBuilder.toString()).getAsJsonObject();
 
                     if (jsonObject.has(name)) {
                         name = jsonObject.get(name).getAsString();
